--- a/osr-correctness.tex
+++ b/osr-correctness.tex
@@ -17,6 +17,9 @@ OSR consists in dynamically transferring execution from a point $l$ in a program
 As we observed in \mysection\ref{ss:osr-llvm-approach}, the OSR practice often makes the conservative assumption that $\pi'$ can always continue from the very same memory store as $\pi$. However, this assumption may reduce the number of points where sound OSR transitions can be fired. To overcome this limitation and support more aggressive OSR transitions, our model includes a {\em store compensation code} $\chi$ to be executed during an OSR transition from point $l$ in $\pi$ to point $l'$ in $\pi'$. The goal of the compensation code is to fix the memory store of $\pi$ at $l$ so that execution can safely continue in $\pi'$ from $l'$ with the fixed store. Note that, if no compensation is needed for an OSR transition, $\mysem{\chi}$ is simply the identity function. We formalize these concepts in the next sections.
 
 \input{osr-mapping}
+\input{osr-mapping-correctness}
+\subsubsection{Examples of LVE Transformations}
+\subsubsection{Composing Multiple Transformation Passes}
 
 \subsection{Multi-Version Programs}
 
