--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1238,3 +1238,12 @@
   address = {New York, NY, USA},
   keywords = {dynamically typed languages, trace-based compilation},
 }
+
+@book{Standish80,
+  author = {Standish, Thomas A.},
+  title = {{Data Structure Techniques}},
+  year = {1980},
+  isbn = {0201072564},
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+  address = {Boston, MA, USA},
+}
