--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1247,3 +1247,21 @@
   publisher = {Addison-Wesley Longman Publishing Co., Inc.},
   address = {Boston, MA, USA},
 }
+
+@inproceedings{Luk05,
+  Acmid = {1065034},
+  Address = {New York, NY, USA},
+  Author = {Luk, Chi-Keung and Cohn, Robert and Muth, Robert and Patil, Harish and Klauser, Artur and Lowney, Geoff and Wallace, Steven and Reddi, Vijay Janapa and Hazelwood, Kim},
+  Booktitle = {Proceedings of the 2005 ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  Doi = {10.1145/1065010.1065034},
+  Isbn = {1-59593-056-6},
+  Keywords = {dynamic compilation, instrumentation, program analysis tools},
+  Location = {Chicago, IL, USA},
+  Numpages = {11},
+  Pages = {190--200},
+  Publisher = {ACM},
+  Series = {PLDI '05},
+  Title = {{Pin: Building Customized Program Analysis Tools with Dynamic Instrumentation}},
+  Url = {http://doi.acm.org/10.1145/1065010.1065034},
+  Year = {2005}
+}
