--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1265,3 +1265,20 @@
   Url = {http://doi.acm.org/10.1145/1065010.1065034},
   Year = {2005}
 }
+
+@inproceedings{Graham82,
+  Acmid = {806987},
+  Address = {New York, NY, USA},
+  Author = {Graham, Susan L. and Kessler, Peter B. and Mckusick, Marshall K.},
+  Booktitle = {Proceedings of the 1982 SIGPLAN Symposium on Compiler Construction},
+  Doi = {10.1145/800230.806987},
+  Isbn = {0-89791-074-5},
+  Location = {Boston, Massachusetts, USA},
+  Numpages = {7},
+  Pages = {120--126},
+  Publisher = {ACM},
+  Series = {SIGPLAN '82},
+  Title = {{Gprof: A Call Graph Execution Profiler}},
+  Url = {http://doi.acm.org/10.1145/800230.806987},
+  Year = {1982}
+}
